[tool.poetry]
name = "find-house"
version = "0.1.0"
description = ""
authors = ["Suvan <overmind77s@gmail.com>"]
readme = "README.md"
packages = [{include = "find_house"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
fake-headers = "^1.0.2"
lxml = "^4.9.1"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
